Bug 39561 - -mno-expand-cbranchdi broken
Summary: -mno-expand-cbranchdi broken
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.4.0
: P4 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2009-03-26 16:23 UTC by Paolo Bonzini
Modified: 2009-05-12 23:08 UTC (History)
3 users (show)

See Also:
Host:
Target: sh*-*-*
Build:
Known to work:
Known to fail:
Last reconfirmed: 2009-03-27 01:21:53


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paolo Bonzini 2009-03-26 16:23:18 UTC
With -m1 -mno-expand-cbranchdi any function having a branch on long long is broken.

I think the option can be removed.
Comment 1 Kazumoto Kojima 2009-03-27 01:21:53 UTC
I'd like to remove that option when the trunk opens for such
changes.
Comment 2 Kazumoto Kojima 2009-05-12 22:47:19 UTC
Subject: Bug 39561

Author: kkojima
Date: Tue May 12 22:47:03 2009
New Revision: 147453

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=147453
Log:
	PR target/39561
	* config/sh/sh.h (OPTIMIZATION_OPTIONS): Don't set
	TARGET_EXPAND_CBRANCHDI4.
	* config/sh/sh.md (cbranchdi4): Don't check TARGET_EXPAND_CBRANCHDI4.
	* config/sh/sh.opt (mexpand-cbranchdi): Remove.
	(cmpeqdi): Fix comment.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/sh/sh.h
    trunk/gcc/config/sh/sh.md
    trunk/gcc/config/sh/sh.opt

Comment 3 Kazumoto Kojima 2009-05-12 23:08:26 UTC
Fixed.

FYI, I've confirmed that -mno-expand-cbranchdi is still broken
after r146539 fix of cbranchdi4 and the cond-optab merge.